# CollegeManagement

./: CMakeLists.txt  College.cpp  College.h  Management.cpp  Management.h  Staff.cpp  main.cpp
